# egdal

./: .gitignore  LICENSE  Makefile  README.md  build.sh  mix.exs
c_src/: gdal.c  gdal_info.c
config/: config.exs
lib/: egdal.ex
lib/egdal/: gdal.ex  gdal_rust.ex
lib/egdal/gdal/: data_type.ex
native/gdal/: .gitignore  Cargo.toml  README.md  build.sh
native/gdal/src/: lib.rs  lib.rs.in
rust/: Cargo.toml  build.sh
rust/src/: data_type.rs  lib.rs  version_info.rs
test/: egdal_test.exs
test/egdal/: gdal_test.exs
test/egdal/gdal/: data_type_test.exs
