[package]
name = "gdal"
version = "0.1.0"
authors = ["Steve Loveless <steve.loveless@gmail.com>"]

[lib]
crate-type = ["dylib"]


[dependencies]
gdal = "*"
# rustler = { version = "=0.12.0", path = "../../../../not_my_projects/Rustler" }
rustler = { git = "https://github.com/hansihe/Rustler" }
# rustler_codegen = { version = "=0.12.0", path = "../../../../not_my_projects/Rustler/rustler_codegen" }
aster = { version = "0.30.0", features = ["with-syntex"] }
