[package]
name = "gdal"
version = "0.1.0"
authors = ["Steve Loveless <steve.loveless@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gdal = "*"
rustler = { git = "https://github.com/hansihe/Rustler" }
rustler_codegen = { git = "https://github.com/hansihe/Rustler" }
aster = { version = "0.30.0", features = ["with-syntex"] }
